@@ -2,7 +2,6 @@ gaim - the Pimpin' Penguin IM Clone that's Good for the Soul
 ------------------------------------------------------------
 
 Rob Flynn <rob@linuxpimps.com> - Main developer (send patches here)
+Eric Warmenhoven <warmenhoven@yahoo.com> - GNOME Applet Guy
 Jim Duchek <jimduchek@ou.edu> - Former Maintainer 
 Mark Spencer <markster@marko.net> - El Queso Grande
-
-A big thanks to Eric Warmenhoven for all of his help
